# m-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
api/: __init__.py  app.py  config.py  storage.py
api/apps/: __init__.py
api/apps/restful_apis/: __init__.py  chunk_api.py  dataset_api.py  document_api.py  search_api.py  system_api.py  user_api.py
api/apps/services/: __init__.py  chunk_api_service.py  dataset_api_service.py  document_api_service.py  search_api_service.py
api/db/: __init__.py  db_models.py
api/db/services/: __init__.py  document_service.py  file2document_service.py  file_service.py  knowledgebase_service.py  llm_service.py  search_service.py  task_service.py  user_service.py
api/utils/: __init__.py  api_utils.py  crypt.py  file_utils.py  health_utils.py
common/: __init__.py  connection_utils.py  constants.py  settings.py
common/doc_store/: doc_store_base.py
infra/: docker-compose.yml
rag/: __init__.py
rag/app/: naive.py  one.py  qa.py
rag/nlp/: __init__.py  search.py
rag/svr/: __init__.py  task_executor.py
rag/utils/: __init__.py  es_conn.py  redis_conn.py
scripts/: api.sh  env.sh  logs.sh  start.sh  status.sh  stop.sh  web.sh  worker.sh
web/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css  tsconfig.json  vite.config.ts
web/src/: app.tsx  main.tsx  routes.tsx
web/src/components/: button-loading.tsx  card-container.tsx  confirm-delete-dialog.tsx  cross-language-form-field.tsx  form-container.tsx  home-card.tsx  rag-avatar.tsx  (+5 more)
worker/: __init__.py  main.py
(+84 files in other folders)
