[project]
name = "m-ragflow"
version = "0.1.0"
description = "Focused RAGFlow learning workspace built one runnable slice at a time."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hypercorn>=0.17.3,<0.18.0",
    "minio>=7.2.0,<8.0.0",
    "mysql-connector-python>=9.0.0,<10.0.0",
    "peewee>=3.17.0,<4.0.0",
    "pycryptodomex==3.20.0",
    "quart>=0.20.0,<0.21.0",
    "redis>=5.2.0,<6.0.0",
    "xxhash>=3.5.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
